fix: cleanup styles for readability

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -233,6 +233,159 @@
       }
   blockquote.highlight-quote.purple:after{
       color: $pyos-mediumpurple;
+    }
+  }
+
+
+  @include breakpoint('max-width: #$mobile') {
+    padding: 0;
+    //font-size: 2rem;
+  }
+}
+
+// for some reason i have to manually override here
+blockquote.highlight-quote.magenta:after{
+    color: $pyos-magenta;
+    }
+blockquote.highlight-quote.purple:after{
+    color: $pyos-mediumpurple;
+    }
+
+/* links */
+
+a {
+  text-underline-offset: .1em;
+  text-decoration-color: rgba($text-color, 0.7);
+  text-decoration: underline;
+
+
+  &:focus {
+    @extend %tab-focus;
+  }
+
+  &:visited {
+    color: $link-color-visited;
+  }
+
+  &:hover {
+    color: $link-color-hover;
+    outline: 0;
+    text-decoration: none !important;
+    text-decoration-line: none !important;
+    transition: color 0.3s ease, text-decoration-color 0.3s ease;
+  }
+}
+
+/* buttons */
+
+button:focus {
+  @extend %tab-focus;
+}
+
+/* code */
+
+tt,
+code,
+kbd,
+samp,
+pre {
+  font-family: $monospace;
+  font-weight: $weight-5;
+  font-size: 1em;
+}
+
+
+
+
+kbd {
+    background-color: $kbd-color-background;
+    color: $kbd-color-text;
+    border-radius: 0.25rem;
+    box-shadow: 0 2px 0 1px $kbd-color-border;
+    line-height: 1;
+    font-size: .75em;
+    padding: .15em .25em;
+
+    &:hover {
+         box-shadow: 0 1px 0 0.5px $kbd-color-border;
+         top: 1px;
+  }
+}
+
+pre {
+  overflow-x: auto; /* add scrollbars to wide code blocks*/
+}
+
+/* horizontal rule */
+
+hr {
+  display: block;
+  margin: 1em 0;
+  border: 0;
+  border-top: 1px solid $border-color;
+}
+
+/* lists */
+
+ul,
+ol {
+  margin-bottom: 1.9em;
+  font-weight: $weight-3;
+}
+ul li,
+ol li {
+  margin-bottom: 0.3em;
+  font-size: $type-size-5;
+  list-style: 1.4em;
+}
+
+ul li::marker {
+    color: #9C939F;  /* Change bullet color */
+}
+
+li ul,
+li ol {
+  margin-top: 0.5em;
+}
+
+/*
+   Media and embeds
+   ========================================================================== */
+
+/* Figures and images */
+
+figure {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin: 2em 0;
+
+  img,
+  iframe,
+  .fluid-width-video-wrapper {
+    margin-bottom: 1em;
+  }
+
+  img {
+    width: 100%;
+    border-radius: $border-radius;
+    -webkit-transition: $global-transition;
+    transition: $global-transition;
+  }
+
+  > a {
+    display: block;
+  }
+
+  &.half {
+    > a,
+    > img {
+      @include breakpoint($small) {
+        width: calc(50% - 0.5em);
       }
 
   /* links */
